Ajustando regra de ativo ou desativado, refatorando URLs controllers